// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Spinner > renders spinner in dark mode 1`] = `
<svg
  class="animate-spin text-blue-600 dark:text-blue-300"
  fill="none"
  height="32"
  viewBox="0 0 24 24"
  width="32"
>
  <circle
    class="opacity-25"
    cx="12"
    cy="12"
    fill="none"
    r="10"
    stroke="currentColor"
    stroke-width="4"
  />
  <path
    class="opacity-75"
    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
    fill="currentColor"
  />
</svg>
`;

exports[`Spinner > renders spinner in light mode 1`] = `
<svg
  class="animate-spin text-blue-600 dark:text-blue-300"
  fill="none"
  height="20"
  viewBox="0 0 24 24"
  width="20"
>
  <circle
    class="opacity-25"
    cx="12"
    cy="12"
    fill="none"
    r="10"
    stroke="currentColor"
    stroke-width="4"
  />
  <path
    class="opacity-75"
    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
    fill="currentColor"
  />
</svg>
`;
